--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,12 +17,12 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Install system packages
+        run: sudo apt update && sudo apt install enchant
+
       - name: Install dependencies
-        run: |
-          sudo apt install -y libenchant1c2a gettext libfreetype-dev libjpeg-dev libffi-dev libssl-dev libxml2-dev libxslt1-dev
-          pip install -r doc/requirements.txt
-
-
+        run: pip3 install -Ur doc/requirements.txt
+      
       - name: Build documentation
         run: make html
         working-directory: doc  # Adjust to your Sphinx docs directory
