--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,8 @@ jobs:
         run: sudo apt update && sudo apt install enchant
 
       - name: Install dependencies
-        run: pip3 install -Ur doc/requirements.txt
+        run: pip install -r requirements.txt
+        working-directory: doc
       
       - name: Build documentation
         run: make html
