Use Uv for managing packages and Ruff for code formatter.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 env/
+.venv
 .coverage
 htmlcov/
 .ropeproject
+*.egg-info/
+*.bak
+*.sqlite
 *.sqlite3
 *.db
 *.py[cod]
@@ -13,7 +17,14 @@ htmlcov/
 *~
 .ropeproject
 __pycache__/
+.cache
 _static/
+static.dist/
+build/
+_build/
+dist/
+pretix/static/jsi18n/
+node_modules/
 .idea
 .secret
 atlassian-ide-plugin.xml
@@ -24,3 +35,6 @@ local/
 .DS_Store
 .python-version
 
+pretix.cfg
+data/
+media/
