--- a/src/tests/travis_postgres.cfg
+++ b/src/tests/travis_postgres.cfg
@@ -1,6 +1,6 @@
 [database]
 backend=postgresql_psycopg2
-name=pretix
-user=postgres
-password=postgres
-host=localhost
+name=test_pretix
+# user=postgres
+# password=postgres
+# host=localhost
