--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,10 @@ jobs:
       - name: Build documentation
         run: make html
         working-directory: doc  # Adjust to your Sphinx docs directory
+      
+      - name: Copy CNAME if it exists
+        run: |
+          if [ -f CNAME ]; then cp CNAME doc/_build/html/; fi
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
