--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -52,7 +52,7 @@ jobs:
         run: make npminstall
       - name: Compile
         working-directory: ./src
-        run: make all compress
+        run: uv run make all compress
       - name: Run tests
         working-directory: ./src
         run: PRETIX_CONFIG_FILE=tests/travis_${{ matrix.database }}.cfg pytest -n 3 -p no:sugar --cov=./ --cov-report=xml --reruns 3 tests --maxfail=100
