--- a/.github/workflows/strings.yml
+++ b/.github/workflows/strings.yml
@@ -31,10 +31,10 @@ jobs:
       - name: Install Python dependencies
         run: uv sync --all-extras
       - name: Compile messages
-        run: python manage.py compilemessages
+        run: uv run python manage.py compilemessages
         working-directory: ./src
       - name: Compile jsi18n
-        run: python manage.py compilejsi18n
+        run: uv run python manage.py compilejsi18n
         working-directory: ./src
   spelling:
     runs-on: ubuntu-latest
@@ -46,7 +46,7 @@ jobs:
         with:
           python-version: 3.11
       - name: Install system packages
-        run: sudo apt update && sudo apt install enchant hunspell hunspell-de-de aspell-en aspell-de
+        run: sudo apt-get update && sudo apt-get install enchant-2 hunspell hunspell-de-de aspell-en aspell-de
       - name: Install uv
         uses: astral-sh/setup-uv@v5
         with:
