--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           python-version: 3.11
       - name: Install system packages
-        run: sudo apt update && sudo apt install enchant hunspell aspell-en
+        run: sudo apt-get update && sudo apt-get install enchant-2 hunspell aspell-en
       - name: Install uv
         uses: astral-sh/setup-uv@v5
         with:
