Fix sphinx-build not found in GH Action

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install Dependencies
         run: uv sync --only-group doc
       - name: Spellcheck docs
-        run: make spelling
+        run: uv run make spelling
         working-directory: ./doc
       - name: Check no errors
         run: '[ ! -s _build/spelling/output.txt ]'
