--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ dependencies = [
   'chardet==5.2.*',
   'mt-940==4.30.*',
   'django-i18nfield>=1.10.2',
-  'psycopg2-binary==2.9.10',
+  'psycopg>=3.2.4',
   'tqdm==4.*',
   'vobject==0.9.*',
   'pycountry',
