--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,19 +24,17 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.11
-      - uses: actions/cache@v1
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
       - name: Install system packages
-        run: sudo apt update && sudo apt install enchant hunspell aspell-en
+        run: sudo apt-get update && sudo apt-get install enchant-2 hunspell aspell-en
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
       - name: Install Dependencies
-        run: pip3 install -Ur doc/requirements.txt
+        run: uv sync --only-group doc
       - name: Spellcheck docs
-        run: make spelling
+        run: uv run make spelling
         working-directory: ./doc
-      - name:
+      - name: Check no errors
         run: '[ ! -s _build/spelling/output.txt ]'
         working-directory: ./doc
