--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,9 @@ jobs:
         working-directory: doc
 
       - name: Build documentation
-        run: uv run make html
+        run: |
+          source .venv/bin/activate
+          make html
         working-directory: doc  # Adjust to your Sphinx docs directory
 
       - name: Copy CNAME if it exists
