--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
@@ -22,16 +22,21 @@ jobs:
           sudo add-apt-repository universe multiverse
           sudo apt update && sudo apt install enchant-2 libffi-dev libssl-dev libxml2-dev libxslt1-dev gettext libfreetype-dev libjpeg-dev
 
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
-          pip install "Jinja2<3.1" "sphinx==5.0.*"
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+
+      - name: Install Python dependencies
+        run: uv sync --only-group doc
         working-directory: doc
-      
+
       - name: Build documentation
-        run: make html
+        run: |
+          source .venv/bin/activate
+          make html
         working-directory: doc  # Adjust to your Sphinx docs directory
-      
+
       - name: Copy CNAME if it exists
         run: |
           if [ -f CNAME ]; then cp CNAME doc/_build/html/; fi
