Ignore some linting rule

--- a/.gitignore
+++ b/.gitignore
@@ -18,18 +18,20 @@ htmlcov/
 .ropeproject
 __pycache__/
 .cache
+
 _static/
 static.dist/
+src/pretix/static/jsi18n/
 build/
 _build/
 dist/
-pretix/static/jsi18n/
 node_modules/
 .idea
 .secret
 atlassian-ide-plugin.xml
 pretixeu/
 local/
+
 .project
 .pydevproject
 .DS_Store
