Fix activating virtual env in GH Action

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Spellcheck docs
         run: |
-          source .venv/bin/activate
+          source ${GITHUB_WORKSPACE}/.venv/bin/activate
           make spelling
         working-directory: ./doc
 
