--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Compile
         working-directory: ./src
         run: |
-          source .venv/bin/activate
+          source ${GITHUB_WORKSPACE}/.venv/bin/activate
           make all compress
       - name: Run tests
         working-directory: ./src
