--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,31 +19,22 @@ jobs:
     name: Spellcheck
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repository
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v2
       - name: Set up Python 3.11
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v1
         with:
           python-version: 3.11
-
       - name: Install system packages
-        run: sudo apt-get update && sudo apt-get install enchant-2 hunspell aspell-en gettext
-
+        run: sudo apt-get update && sudo apt-get install enchant-2 hunspell aspell-en
       - name: Install uv
         uses: astral-sh/setup-uv@v5
         with:
           enable-cache: true
-
       - name: Install Dependencies
         run: uv sync --only-group doc
-
       - name: Spellcheck docs
-        run: |
-          source .venv/bin/activate
-          make spelling
+        run: uv run make spelling
         working-directory: ./doc
-
       - name: Check no errors
         run: '[ ! -s _build/spelling/output.txt ]'
         working-directory: ./doc
