--- a/.github/workflows/strings.yml
+++ b/.github/workflows/strings.yml
@@ -17,42 +17,46 @@ jobs:
     runs-on: ubuntu-latest
     name: Check gettext syntax
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v2
       - name: Set up Python 3.11
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v1
         with:
           python-version: 3.11
+      - uses: actions/cache@v1
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
       - name: Install system packages
         run: sudo apt update && sudo apt install gettext
-      - name: Install uv
-        uses: astral-sh/setup-uv@v5
-        with:
-          enable-cache: true
-      - name: Install Python dependencies
-        run: uv sync --all-extras
+      - name: Install Dependencies
+        run: pip3 install -e ".[dev]"
       - name: Compile messages
-        run: uv run python manage.py compilemessages
+        run: python manage.py compilemessages
         working-directory: ./src
       - name: Compile jsi18n
-        run: uv run python manage.py compilejsi18n
+        run: python manage.py compilejsi18n
         working-directory: ./src
   spelling:
     runs-on: ubuntu-latest
     name: Spellcheck
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v2
       - name: Set up Python 3.11
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v1
         with:
           python-version: 3.11
-      - name: Install system packages
-        run: sudo apt-get update && sudo apt-get install enchant-2 hunspell hunspell-de-de aspell-en aspell-de
-      - name: Install uv
-        uses: astral-sh/setup-uv@v5
+      - uses: actions/cache@v1
         with:
-          enable-cache: true
-      - name: Install Python dependencies
-        run: uv sync --all-extras --group test
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+      - name: Install system packages
+        run: sudo apt update && sudo apt install enchant hunspell hunspell-de-de aspell-en aspell-de
+      - name: Install Dependencies
+        run: pip3 install -e ".[dev]"
       - name: Spellcheck translations
-        run: uv run potypo
+        run: potypo
         working-directory: ./src
