--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -15,6 +15,13 @@ line_length = 79
 honor_noqa = true
 skip = make_testdata.py,wsgi.py,bootstrap,celery_app.py,pretix/settings.py,tests/settings.py,pretix/testutils/settings.py
 
+[tool:pytest]
+DJANGO_SETTINGS_MODULE=tests.settings
+addopts =--reruns 3 -rw
+filterwarnings =
+    ignore:The 'warn' method is deprecated:DeprecationWarning
+    ignore:django.contrib.staticfiles.templatetags.static:DeprecationWarning
+
 [coverage:run]
 source = pretix
 omit = */migrations/*,*/urls.py,*/tests/*,*/testdummy/*,*/admin.py,pretix/wsgi.py,pretix/settings.py
