--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,7 @@ name: Deploy Sphinx Documentation to GitHub Pages
 
 on:
   push:
-    branches:
-      - deployment  # Adjust this to your default branch
+    branches: [ development, main ]
 
 jobs:
   deploy:
@@ -26,7 +25,7 @@ jobs:
 
       - name: Build documentation
         run: make html
-        working-directory: doc  # Adjust to your Sphinx docs directory
+        working-directory: doc
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
