Better docker development tools (#268)
* Easier docker based development

- allow for UID/GID of user to be determined at image build time
- allow passing in --reload and change log level for gunicorn
- provide a new pretalx command `devel` that is used for starting
  in reloading mode

* Add Makefile to build local docker image

* Add Makefile to manifest

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,7 @@ include CNAME
 include README.rst
 include src/pretalx.example.cfg
 include Dockerfile
+include Makefile
 
 recursive-include deployment *.bash
 recursive-include deployment *.conf
