Make gh-pages deployement honor CNAME (#272)
* Make gh-pages deployement honor CNAME

* Move CNAME into doc/

--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -27,6 +27,9 @@ jobs:
         run: make html
         working-directory: doc
 
+      - name: Copy CNAME to deploy directory
+        run: cp doc/CNAME doc/_build/html
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
