Make login button label configurable (#275)
* Let login button label configurable

* More logs

* Mistake logging syntax with other libs

* Fix coding style

--- a/src/pretalx.example.cfg
+++ b/src/pretalx.example.cfg
@@ -9,6 +9,8 @@ static = /var/pretalx/static
 debug = False
 url = https://eventyay.mydomain.com
 name = eventyay
+# To select a variant from CALL_FOR_SPEAKER_LOGIN_BTN_LABELS.
+call_for_speaker_login_button_label = default
 
 [database]
 backend = postgresql
@@ -16,7 +18,7 @@ name = pretalx
 user = pretalx
 # For PostgreSQL on the same host, we don't need one because we can use
 # peer authentification if our PostgreSQL user matches our unix user.
-password = Change this in production or you're going to have a bad time
+password = Change this in production or you"'"re going to have a bad time
 # For a remote host, supply an IP address
 # For local postgres authentication, you can leave the host empty
 host = localhost
@@ -27,6 +29,6 @@ from = admin@localhost
 host = localhost
 port = 25
 user = admin
-password = Change this in production or you're going to have a bad time
+password = Change this in production or you"'"re going to have a bad time
 tls = False
 ssl = True
