Fix error 500 for MediaWiki user without email

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,7 +102,7 @@ dependencies = [
         'eventyay-paypal @ git+https://your_token@github.com/fossasia/eventyay-tickets-paypal.git@master',
         'django_celery_beat==2.7.0',
         'cron-descriptor==1.4.5',
-        'django-allauth[socialaccount]==65.3.0',
+        'django-allauth[socialaccount] @ git+https://codeberg.org/quan/django-allauth.git@f151589949',
         'eventyay-stripe @ git+https://github.com/fossasia/eventyay-tickets-stripe.git@master',
         'pydantic==2.10.4'
 ]
