--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,60 +103,5 @@ dependencies = [
         'django_celery_beat==2.7.0',
         'cron-descriptor==1.4.5',
         'django-allauth[socialaccount] @ git+https://codeberg.org/quan/django-allauth.git@f151589949',
-        'eventyay-stripe @ git+https://github.com/fossasia/eventyay-tickets-stripe.git@master',
-        'pydantic==2.10.4'
-]
+        'eventyay-stripe @ git+https://github.com/fossasia/eventyay-tickets-stripe.git@ma
 
-[project.optional-dependencies]
-memcached = ["pylibmc"]
-dev = [
-            'django-debug-toolbar==4.4.*',
-            'pycodestyle==2.12.*',
-            'pyflakes==3.2.*',
-            'flake8==7.1.*',
-            'pep8-naming==0.14.*',
-            'coveralls',
-            'coverage',
-            'pytest==7.2.*',
-            'pytest-django==4.*',
-            'pytest-xdist==3.6.*',
-            'isort==5.13.*',
-            'pytest-mock==3.14.*',
-            'pytest-rerunfailures==14.*',
-            'responses',
-            'potypo',
-            'freezegun',
-            'pytest-cache',
-            'pytest-cov',
-            'pytest-sugar',
-]
-
-[project.entry-points."distutils.commands"]
-build = "setup:CustomBuild"
-build_ext = "setup:CustomBuildExt"
-
-
-[build-system]
-requires = [
-  'setuptools',
-  'setuptools-rust',
-  'wheel',
-  'importlib_metadata'
-]
-
-[project.urls]
-homepage = "https://eventyay.com"
-repository = "https://github.com/fossasia/eventyay-tickets.git"
-documentation = "https://eventyay.com"
-changelog = "https://eventyay.com"
-
-[tool.setuptools]
-include-package-data = true
-
-[tool.setuptools.dynamic]
-version = {attr = "pretix.__version__"}
-
-[tool.setuptools.packages.find]
-where = ["src"]
-include = ["pretix*"]
-namespaces = false
