--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           cache: "pip"
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
       - name: Set up node
         uses: actions/setup-node@v4
         with:
@@ -46,13 +48,13 @@ jobs:
       - name: Install system dependencies
         run: sudo apt update && sudo apt install -y gettext unzip
       - name: Install Python dependencies
-        run: python -m pip install uv && uv pip install --system twine wheel -Ue ".[dev]"
+        run: uv sync
       - name: Run check-manifest
-        run: check-manifest
+        run: uv run check-manifest
       - name: Run build
-        run: python -m build
+        run: uv build
       - name: Check package
-        run: twine check dist/*
+        run: uvx twine check dist/*
       - name: Check files to make sure we ship our frontend
         run: unzip -l dist/pretalx*whl | grep frontend || exit 1
       - name: Check files to make sure we ship our frontend but not our node_modules
@@ -60,12 +62,9 @@ jobs:
       - name: Install the created wheel package with pip
         run: |
           # Switch to a new virtualenv
-          mkdir test_venv
           python -m venv test_venv
-          . test_venv/bin/activate
-
-          python -m pip install dist/pretalx*whl
+          test_venv/bin/python -m pip install dist/pretalx*whl
       - name: Make sure we can run pretalx commands
-        run: python -m pretalx help
+        run: test_venv/bin/python -m pretalx help
       - name: Make sure we can run through all migrations
-        run: python -m pretalx migrate
+        run: test_venv/bin/python -m pretalx migrate
