--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,10 +28,12 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y enchant-2 hunspell aspell-en
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
       - name: Install Dependencies
-        run: python -m pip install uv && uv pip install --system -Ur doc/requirements.txt
+        run: uv sync --group doc --no-install-project
       - name: Spellcheck docs
-        run: make spelling
+        run: uv run make spelling
         working-directory: ./doc
       - name: Put spelling errors into summary file
         run: |
@@ -59,10 +61,12 @@ jobs:
         with:
           python-version-file: ".github/workflows/python-version.txt"
           cache: "pip"
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
       - name: Install Dependencies
-        run: pip install uv && uv pip install --system -Ur doc/requirements.txt
+        run: uv sync --group doc --no-install-project
       - name: Linkcheck docs
-        run: make linkcheck
+        run: uv run make linkcheck
         working-directory: ./doc
       - name: Put linkcheck result into summary
         run: |
