--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -16,12 +16,15 @@ jobs:
         with:
           python-version: '3.11'
           cache: 'pip'
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
       
       - name: Install system packages
         run: sudo apt update && sudo apt install libffi-dev gettext
 
       - name: Install dependencies
-        run: pip install --upgrade-strategy eager -Ur doc/requirements.txt
+        run: uv sync --group doc --no-install-project
 
       - name: Build documentation
         run: make html
