--- a/.github/workflows/strings.yml
+++ b/.github/workflows/strings.yml
@@ -29,8 +29,10 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y gettext
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
       - name: Install Python dependencies
-        run: python -m pip install uv && uv pip install --system -e ".[dev]"
+        run: uv sync --no-install-project
       - name: Compile locales
-        run: python manage.py compilemessages
+        run: uv run manage.py compilemessages
         working-directory: ./src
