--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -19,50 +19,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  isort:
-    name: isort
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version-file: ".github/workflows/python-version.txt"
-          cache: "pip"
-      - name: Install Dependencies
-        run: python -m pip install uv && uv pip install --system -Ue ".[dev]"
-      - name: Run isort
-        run: isort -c .
-        working-directory: ./src
-  flake:
-    name: flake8
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version-file: ".github/workflows/python-version.txt"
-          cache: "pip"
-      - name: Install Dependencies
-        run: python -m pip install uv && uv pip install --system -Ue ".[dev]"
-      - name: Setup flake8 annotations
-        uses: rbialon/flake8-annotations@v1
-      - name: Run flake8
-        run: flake8 .
-        working-directory: ./src
-  black:
-    name: black
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version-file: ".github/workflows/python-version.txt"
-          cache: "pip"
-      - name: Add problem matcher for black
-        run: echo "::add-matcher::.github/workflows/matchers/black.json"
-      - uses: psf/black@stable
-        with:
-          src: "./src"
+  # TODO: Run Ruff
   html:
     name: HTML checks
     runs-on: ubuntu-latest
@@ -72,10 +29,10 @@ jobs:
         with:
           python-version-file: ".github/workflows/python-version.txt"
           cache: "pip"
-      - name: Install Dependencies
-        run: python -m pip install uv && uv pip install --system -Ue ".[dev]"
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
       - name: Run djhtml
-        run: 'djhtml pretalx/'
+        run: uv run --only-group lint djhtml pretalx/
         working-directory: ./src
       - name: Make sure we always use trimmed translation strings
         run: "! git grep ' blocktranslate ' | grep -v trimmed"
