--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -56,26 +56,28 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y gettext
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
       - name: Install Python dependencies
-        run: python -m pip install uv && uv pip install --system -Ue ".[dev]"
+        run: uv sync --group test --no-install-project
       - name: Install Postgres dependencies
-        run: python -m pip install uv && uv pip install --system -Ue ".[postgres]"
+        run: uv sync --extra postgres --group test --no-install-project
         if: matrix.database == 'postgres'
       - name: Install frontend dependencies
         run: npm ci
         working-directory: ./src/pretalx/frontend/schedule-editor
       - name: Run checks
-        run: python manage.py check --deploy
+        run: uv run manage.py check --deploy
         working-directory: ./src
       - name: Run checks
-        run: python manage.py compilemessages
+        run: uv run manage.py compilemessages
         working-directory: ./src
       - name: Run tests
         working-directory: ./src
         run: |
           # tee will gobble up our exit code without pipefail
           set -o pipefail
-          python -m pytest \
+          uv run pytest \
             -nauto -p no:sugar \
             --junitxml=pytest.xml \
             --cov-report=term-missing:skip-covered \
@@ -86,14 +88,14 @@ jobs:
         working-directory: ./src
         shell: bash  # needed to make echo work as expected
         run: |
-          python -m coverage json
+          uv run -m coverage json
 
           export TOTAL_COV=$(python -c "import json;print(json.load(open('coverage.json'))['totals']['percent_covered_display'])")
           echo "TOTAL_COV=$TOTAL_COV" >> $GITHUB_ENV
           echo "## Test coverage: $TOTAL_COV%" >> $GITHUB_STEP_SUMMARY
-          python -m coverage report --skip-covered --skip-empty --show-missing --format=markdown >> $GITHUB_STEP_SUMMARY
+          uv run -m coverage report --skip-covered --skip-empty --show-missing --format=markdown >> $GITHUB_STEP_SUMMARY
 
-          python -m coverage report
+          uv run -m coverage report
         if: matrix.database == 'postgres' && matrix.python-version == '3.11'
 
       - name: "Make badge"
