--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -32,7 +32,7 @@ http {
     #gzip  on;
 
     upstream eventyay {
-        server eventyay-web-1:8000;
+        server eventyay-next-web:8000;
     }
 
  server {
