Fix static files serving via nginx

--- a/app/eventyay.cfg
+++ b/app/eventyay.cfg
@@ -14,8 +14,8 @@ video_server_hostname=https://app.eventyay.com:8443
 base_path=/tickets
 
 [urls]
-static=/tickets/static/
-media=/tickets/media/
+static=/static/
+media=/media/
 
 [locale]
 default=en
