--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -49,7 +49,7 @@ http {
     }
 
     location /static/ {
-        alias /home/app/web/staticfiles/;
+        alias /home/app/web/static/;
     }
 
     location /media/ {
