--- a/deployment/docker-compose.prod.yml
+++ b/deployment/docker-compose.prod.yml
@@ -5,7 +5,7 @@ services:
     image: eventyay/eventyay-next:enext
     container_name: eventyay-next-web
     build:
-      context: ./app
+      context: ../app
       dockerfile: Dockerfile.prod
     command: gunicorn eventyay.config.wsgi:application --bind 0.0.0.0:8000
     volumes:
@@ -35,7 +35,7 @@ services:
     image: nginx:stable
     container_name: eventyay-next-nginx
     volumes:
-      - static_volume:/home/app/web/eventyay/staticfiles
+      - static_volume:/home/app/web/static
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
       - 1337:80
