Set default url name, and use correct group

--- a/app/eventyay.cfg
+++ b/app/eventyay.cfg
@@ -1,7 +1,7 @@
-[pretix]
+[eventyay]
 instance_name=eventyay
 #url=https://app.eventyay.com/tickets
-url=http://localhost
+url=http://next.eventyay.com
 currency=USD
 ; DO NOT change the following value, it has to be set to the location of the
 ; directory *inside* the docker container
