Fix docker deployment
- activate venv in entrypoint
- add [pool,binary] to psycog in pyproject.toml and uv lock it

--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -154,7 +154,7 @@ dependencies = [
     "prompt-toolkit>=3.0.51",
     "propcache>=0.2.1",
     "protobuf>=5.28.3",
-    "psycopg>=3.2.9",
+    "psycopg[binary,pool]>=3.2.9",
     "publicsuffixlist>=1.0.2.20250529",
     "pyasn1>=0.6.1",
     "pyasn1-modules>=0.4.2",
