Update README and dev docker deployment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: eventyay-next-web
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - ./app/:/usr/src/app/
+      - ./app/eventyay:/usr/src/app/eventyay
     ports:
       - 8000:8000
     env_file:
