add platform specifics and resolve issue due to wrong copy order

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -12,6 +12,9 @@ ENV PYTHONUNBUFFERED=1
 # install system dependencies
 RUN apt-get update && apt-get install -y netcat-traditional git build-essential gettext
 
+# copy project files
+COPY . .
+
 # install dependencies
 RUN --mount=type=cache,target=/root/.cache/uv \
     --mount=type=bind,source=uv.lock,target=uv.lock \
@@ -22,9 +25,6 @@ RUN --mount=type=cache,target=/root/.cache/uv \
 COPY ./entrypoint.sh .
 RUN sed -i 's/\r$//g' /usr/src/app/entrypoint.sh
 RUN chmod +x /usr/src/app/entrypoint.sh
-
-# copy project
-COPY . .
 
 # Expose virtual env
 ENV VIRTUAL_ENV=/usr/src/app/.venv
