--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ name: eventyay
 services:
   web:
     build: ./app
+    platform: linux/amd64
     container_name: eventyay-next-web
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
@@ -15,6 +16,7 @@ services:
       - db
   db:
     image: postgres:15
+    platform: linux/amd64
     container_name: eventyay-next-db
     volumes:
       - postgres_data_dev:/var/lib/postgresql/data/
